# GMVAE

./: pyproject.toml
config/: log.yml  loss.yml  optimizer.yml  training.yml
config/data/: cosine.yml  dataloader.yml
config/static/categorical/: decoder.yml  encoder.yml  latent.yml
config/static/continuous/: decoder.yml  encoder.yml  latent.yml
config/temporal/categorical/: encoder.yml  latent.yml
config/temporal/continuous/: decoder.yml  encoder.yml  latent.yml  node.yml
src/gmvae/: __init__.py
src/gmvae/model/: GMVAE.py
src/gmvae/networks/: Networks.py  __init__.py
